--- a/hw_2/html/index.html
+++ b/hw_2/html/index.html
@@ -11,13 +11,17 @@
 
 <body>
     <div class="top">
-        <div class="header">
+        <div class="header center">
             <div class="header-logo">
-                <img src="img/logo.svg" alt="logo">
-                <p class="text-logo">GrowBe</p>
+                <img class="logo-pic" src="img/logo.svg" alt="logo">
+                <p class="text-logo">Grow</p>
+                <p class="text-logo orange">Be</p>
+
+                </p>
+
             </div>
             <div class="heading-links">
-                <a href="#" class="header-links">Home</a>
+                <a href="#" class="header-links orange">Home</a>
                 <a href="#" class="header-links">About Us</a>
                 <a href="#" class="header-links">Services</a>
                 <a href="#" class="header-links">Features</a>
@@ -26,12 +30,12 @@
                 <a href="#" class="header-links">Contact</a>
             </div>
         </div>
-        <div class="top-content">
+        <div class="top-content center">
             <div class="top-info">
                 <h1 class="title">SEO & Digital
                     Marketing For Your
                     Website.</h1>
-                <p class="text">Provide all kind of seo services and help to improve
+                <p class="top-info-text">Provide all kind of seo services and help to improve
                     seo ranking. Globally incubate standards.</p>
 
                 <div class="top-info-buttons">
@@ -42,7 +46,7 @@
             </div>
             <img class="top-content-img" src="img/top-content-img.svg" alt="top-content-img">
         </div>
-        <div class="top-logos">
+        <div class="top-logos center-logo">
             <img src="img/1.svg" alt="logo" class="logo">
             <img src="img/6.svg" alt="logo" class="logo">
             <img src="img/3.svg" alt="logo" class="logo">
