--- a/hw_2/html/index.html
+++ b/hw_2/html/index.html
@@ -55,6 +55,65 @@
             <img src="img/6.svg" alt="logo" class="logo">
         </div>
     </div>
+    <div class="content">
+        <div class="content-slogan">
+            <div class="content-slogan-item">
+                <img class="slogan-item-pic" src="/img/slogan1.svg" alt="slogan">
+                <h4 class="content-slogan-heading">Grow Your Business</h4>
+                <p class="content-slogan-text">Leverage agile frameworks to provide a robust synopsis for high level
+                    overviews.</p>
+                <a class="content-slogan-link" href="#">Read More...</a>
+
+            </div>
+            <div class="content-slogan-item">
+                <img class="slogan-item-pic" src="/img/slogan2.svg" alt="slogan">
+                <h4 class="content-slogan-heading">Get Quality Ieads</h4>
+                <p class="content-slogan-text">Leverage agile frameworks to provide a robust synopsis for high level
+                    overviews.</p>
+                <a class="content-slogan-link" href="#">Read More...</a>
+            </div>
+            <div class="content-slogan-item">
+                <img class="slogan-item-pic" src="/img/slogan3.svg" alt="slogan">
+                <h4 class="content-slogan-heading">Drive More Sales</h4>
+                <p class="content-slogan-text">Leverage agile frameworks to provide a robust synopsis for high level
+                    overviews.</p>
+                <a class="content-slogan-link" href="#">Read More...</a>
+            </div>
+        </div>
+        <div class="content-main">
+            <h3 class="h3-heading">Why You Should Choose Us.</h3>
+            <p class="content-main-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly
+                coordinate e-business
+                applications through revolutionary catalysts.</p>
+            <div class="content-main-items">
+                <div class="content-main-item">
+                    <img src="/img/content-item1.svg" alt="content-item">
+                    <h5 class="content-item-heading">Keyword Research</h5>
+                    <p class="content-item-text">Business applications through revolutionary catalysts for chang the
+                        Seamlessly underwhelm dures.</p>
+                    <button class="content-item-button">Learn More<img class="item-button-icon"
+                            src="/img/content-button-icon.svg" alt="icon"></button>
+                </div>
+                <div class="content-main-item">
+                    <img src="/img/content-item2.svg" alt="content-item">
+                    <h5 class="content-item-heading">Seo Optimazadion</h5>
+                    <p class="content-item-text">Business applications through revolutionary catalysts for chang the
+                        Seamlessly underwhelm dures.</p>
+                    <button class="content-item-button">Learn More<img class="item-button-icon"
+                            src="/img/content-button-icon.svg" alt="icon"></button>
+                </div>
+                <div class="content-main-item">
+                    <img src="/img/content-item3.svg" alt="content-item">
+                    <h5 class="content-item-heading">Social Marketing</h5>
+                    <p class="content-item-text">Business applications through revolutionary catalysts for chang the
+                        Seamlessly underwhelm dures.</p>
+                    <button class="content-item-button">Learn More<img class="item-button-icon"
+                            src="/img/content-button-icon.svg" alt="icon"></button>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 </body>
 
