--- a/hw_3/html/index.html
+++ b/hw_3/html/index.html
@@ -17,21 +17,23 @@
         <div class="header center">
             <div class="header-logo-and-find">
                 <img class="logo" src="/img/logo.svg" alt="logo">
-                <a href="#" class="header-link"> <img src="/img/find-icon.svg" alt="find-icon"></a>
+                <a href="#" class="header-link"> <img src="img/find-icon.svg" alt="find-icon"></a>
             </div>
 
             <div class="header-menu">
-                <a href="#" class="header-link"><img src="/img/button-burger.svg" alt="menu"></a>
-                <a href="#" class="header-link"><img src="/img/button-profile.svg" alt="profile"></a>
-                <a href="#" class="header-link"><img src="/img/button-basket.svg" alt="basket"></a>
+                <a href="#" class="header-link"><img src="img/button-burger.svg" alt="menu"></a>
+                <a href="#" class="header-link"><img src="img/button-profile.svg" alt="profile"></a>
+                <a href="#" class="header-link"><img src="img/button-basket.svg" alt="basket"></a>
+                <img class="header-menu-count-backgr" src="img/counter-background.svg" alt="">
+                <p class="counter-text">5</p>
             </div>
         </div>
         <div class="top-content center">
             <div class="top-content-img">
-                <img class="img" src="/img/main-pic.svg" alt="main-pic">
+                <img class="main-img" src="img/main-pic.svg" alt="main-pic">
             </div>
             <div class="top-content-img-and-text">
-                <img src="/img/pink-stick.svg" alt="pink-stick">
+                <img src="img/pink-stick.svg" alt="pink-stick">
                 <div class="top-content-text">
                     <h1 class="title">THE BRAND</h1>
                     <h2 class="subtitle">OF LUXERIOUS</h2>
@@ -46,16 +48,15 @@
     </div>
     <div class="categories center">
         <div class="item">
-            <a href="#" class="categories-link"><img src="/img/for-women.svg" alt="for-women"></a>
+            <a href="#"><img class="item-img" src="/img/for-women.svg" alt="for-women"></a>
         </div>
         <div class="item">
-            <a href="#" class="categories-link"><img src="/img/for-men.svg" alt="for-men"></a>
+            <a href="#"><img class="item-img" src="/img/for-men.svg" alt="for-men"></a>
         </div>
         <div class="item">
-            <a href="#" class="categories-link"><img src="/img/for-kids.svg" alt="for-kids"></a>
+            <a href="#"><img class="item-img" src="/img/for-kids.svg" alt="for-kids"></a>
         </div>
-        <div class="item">
-            <a href="#" class="categories-link"><img src="/img/ACCESORIES.svg" alt="ACCESORIES"></a>
+        <div class="item item-big"><img class="item-img-big" src="/img/ACCESORIES.svg" alt="ACCESORIES"></a>
         </div>
 
     </div>
@@ -68,7 +69,7 @@
 
     <div class="products-content center">
         <div class="product-card">
-            <img class="item-img" src="/img/item-1.svg" alt="pic">
+            <img class="item-img" src="img/item-1.svg" alt="pic">
             <div class="card-title-and-price">
                 <h3 class="item-title">ELLERY X M'O CAPSULE</h3>
                 <p class="item-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool
@@ -80,7 +81,7 @@
 
         </div>
         <div class="product-card">
-            <img class="item-img" src="/img/item-2.svg" alt="pic">
+            <img class="item-img" src="img/item-2.svg" alt="pic">
             <div class="card-title-and-price">
                 <h3 class="item-title">ELLERY X M'O CAPSULE</h3>
                 <p class="item-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool
@@ -90,7 +91,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img class="item-img" src="/img/item-3.svg" alt="pic">
+            <img class="item-img" src="img/item-3.svg" alt="pic">
             <div class="card-title-and-price">
                 <h3 class="item-title">ELLERY X M'O CAPSULE</h3>
                 <p class="item-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
@@ -101,7 +102,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img class="item-img" src="/img/item-4.svg" alt="pic">
+            <img class="item-img" src="img/item-4.svg" alt="pic">
             <div class="card-title-and-price">
                 <h3 class="item-title">ELLERY X M'O CAPSULE</h3>
                 <p class="item-text">Known for her sculptural takes on traditional tailoring, Australian arbiter
@@ -112,7 +113,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img class="item-img" src="/img/item-5.svg" alt="pic">
+            <img class="item-img" src="img/item-5.svg" alt="pic">
             <div class="card-title-and-price">
                 <h3 class="item-title">ELLERY X M'O CAPSULE</h3>
                 <p class="item-text">Known for her sculptural takes on traditional tailoring, Australian
@@ -123,7 +124,7 @@
             </div>
         </div>
         <div class="product-card">
-            <img class="item-img" src="/img/item-6.svg" alt="pic">
+            <img class="item-img" src="img/item-6.svg" alt="pic">
             <div class="card-title-and-price">
                 <h3 class="item-title">ELLERY X M'O CAPSULE</h3>
                 <p class="item-text">Known for her sculptural takes on traditional tailoring, Australian
@@ -134,11 +135,10 @@
             </div>
         </div>
 
-
-        <div class="products-bottom center">
-            <div class="products-bottom-button">
-                <a class="products-bottom-button-text" href="#">Browse All Product</a>
-            </div>
+    </div>
+    <div class="products-bottom">
+        <div class="products-bottom-button">
+            <a class="products-bottom-button-text" href="#">Browse All Product</a>
         </div>
 
 
