--- a/hw_3/html/index.html
+++ b/hw_3/html/index.html
@@ -16,24 +16,24 @@
     <div class="top">
         <div class="header center">
             <div class="header-logo-and-find">
-                <img class="logo" src="/img/logo.svg" alt="logo">
+                <img class="logo" src="img/logo.svg" alt="logo">
                 <a href="#" class="header-link"> <img src="img/find-icon.svg" alt="find-icon"></a>
             </div>
 
             <div class="header-menu">
                 <a href="#" class="header-link"><img src="img/button-burger.svg" alt="menu"></a>
-                <a href="#" class="header-link"><img src="img/button-profile.svg" alt="profile"></a>
-                <a href="#" class="header-link"><img src="img/button-basket.svg" alt="basket"></a>
-                <img class="header-menu-count-backgr" src="img/counter-background.svg" alt="">
-                <p class="counter-text">5</p>
+                <a href="#" class="header-link hidden"><img src="img/button-profile.svg" alt="profile"></a>
+                <a href="#" class="header-link hidden"><img src="img/button-basket.svg" alt="basket"></a>
+                <img class="header-menu-count-backgr hidden" src="img/counter-background.svg" alt="">
+                <p class="counter-text hidden">5</p>
             </div>
         </div>
         <div class="top-content center">
             <div class="top-content-img">
-                <img class="main-img" src="img/main-pic.svg" alt="main-pic">
+                <img class="main-img hidden" src="img/main-pic.svg" alt="main-pic">
             </div>
             <div class="top-content-img-and-text">
-                <img src="img/pink-stick.svg" alt="pink-stick">
+                <img class="pink-stick" src="img/pink-stick.svg" alt="pink-stick">
                 <div class="top-content-text">
                     <h1 class="title">THE BRAND</h1>
                     <h2 class="subtitle">OF LUXERIOUS</h2>
@@ -48,15 +48,43 @@
     </div>
     <div class="categories center">
         <div class="item">
-            <a href="#"><img class="item-img" src="/img/for-women.svg" alt="for-women"></a>
+            <a href="#"><img class="item-img" src="img/for-women.svg" alt="for-women"></a>
+            <div class="item-text-for-center">
+                <p class="item-big-text">30% OFF</p>
+                <br>
+                <p class="item-big-text-pink">FOR WOMEN
+                </p>
+            </div>
+
         </div>
         <div class="item">
-            <a href="#"><img class="item-img" src="/img/for-men.svg" alt="for-men"></a>
+            <a href="#"><img class="item-img" src="img/for-men.svg" alt="for-men"></a>
+            <div class="item-text-for-center">
+                <p class="item-big-text">HOT DEAL</p>
+                <br>
+                <p class="item-big-text-pink">FOR MEN
+                </p>
+            </div>
+
         </div>
         <div class="item">
-            <a href="#"><img class="item-img" src="/img/for-kids.svg" alt="for-kids"></a>
+            <a href="#"><img class="item-img" src="img/for-kids.svg" alt="for-kids"></a>
+            <div class="item-text-for-center">
+                <p class="item-big-text">NEW ARRIVALS</p>
+                <br>
+                <p class="item-big-text-pink">FOR KIDS
+                </p>
+            </div>
+
         </div>
-        <div class="item item-big"><img class="item-img-big" src="/img/ACCESORIES.svg" alt="ACCESORIES"></a>
+        <div class="item item-big"><img class="item-img-big" src="img/accesories.svg" alt="ACCESORIES"></a>
+            <div class="item-text-for-center">
+                <p class="item-big-text">LUXIROUS & TRENDY
+                </p><br>
+                <p class="item-big-text-pink">ACCESORIES
+                </p>
+            </div>
+
         </div>
 
     </div>
