--- a/the_brand/index.html
+++ b/the_brand/index.html
@@ -15,15 +15,15 @@
 <body>
     <header class="header center">
         <div class="header__left__div">
-            <a href="index.html" class="logo"><img class="logo__img" src="img/logo.svg" alt="logo"></a>
-            <div class="logo__text">BRAN<span class="logo__text__pink__bold">D</span></div>
+            <a href="index.html" class="header__logo"><img class="logo__img" src="img/logo.svg" alt="logo"></a>
+            <div class="header__logo__text">BRAN<span class="header__logo__text__pink__bold">D</span></div>
             <div class="header__top">
                 <details class="header__top__menu">
                     <summary class="header__top__menu__sum">
-                        <p class="text"><span>Browse</span></p>
+                        <p class="header__text"><span>Browse</span></p>
                         <svg class="svg__caret__down" xmlns="http://www.w3.org/2000/svg" height="16" width="10"
                             viewBox="0 0 320 512">
-                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+
                             <path class="svg__caret__down__path"
                                 d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
                         </svg>
@@ -31,7 +31,7 @@
                     <div class="header__drop__down">
                         <details class="header__drop__down__categories">
                             <summary class="header__drop__down__categories__summary">
-                                <p class="header__drop__down__categories__title">WOMEN</p>
+                                <a class="header__drop__down__categories__title">WOMEN</a>
                                 <div class="line__separator"></div>
                             </summary>
                             <div class="header__drop__down__items">
@@ -48,7 +48,7 @@
                         </details>
                         <details class="header__drop__down__categories">
                             <summary class="header__drop__down__categories__summary">
-                                <p class="header__drop__down__categories__title">MEN</p>
+                                <a class="header__drop__down__categories__title">MEN</a>
                                 <div class="line__separator"></div>
                             </summary>
                             <div class="header__drop__down__items">
@@ -67,7 +67,7 @@
                     <button class="header__search__button" type="submit">
                         <svg class="svg__search" xmlns="http://www.w3.org/2000/svg" height="16" width="16"
                             viewBox="0 0 512 512">
-                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+
                             <path class="svg__search__path"
                                 d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
                         </svg>
@@ -77,68 +77,131 @@
         </div>
 
         <div class="header__right__div">
-
-            <div class="header__right__div__cart">
-                <label for="cart"><img src="img/cart.svg" alt="cart"></label>
-                <input type="checkbox" id="cart">
-                <nav class="header__right__div__cart__drop">
-                    <div class="header__right__div__cart__drop__product">
-                        <img src="img/product_mini_1.jpg" alt="prod">
-                        <div class="header__right__div__cart__drop__product__item">
-                            <p class="text__product__mini">Rebox Zane</p>
-                            <img src="img/stars.svg" alt="stars">
-                            <p class="text__product__mini__price"> 1 <span
-                                    class="text__product__mini__price__X">x</span>$250</p>
-
-                        </div>
-                        <img class="header__right__div__cart__product__close__img" src="img/close-icon.svg" alt="close">
+            <img class="header__right__div__cart" src="img/cart.png" alt="cart">
+            <details class="header__right__div__button">
+                <summary class="header__right__div__button__summary">
+                    <div class="header__right__div__button__summary__cont">
+                        <p class="header__right__div__button__text">My Account</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" viewBox="0 0 320 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path class="header__right__div__button__caret" fill="#ffffff"
+                                d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
+                        </svg>
                     </div>
-                    <div class="line__separator__right__drop"></div>
-                    <div class="header__right__div__cart__drop__product">
-                        <img src="img/product_mini_2.jpg" alt="prod">
-                        <div class="header__right__div__cart__drop__product__item">
-                            <p class="text__product__mini">Rebox Zane</p>
-                            <img src="img/stars.svg" alt="stars">
-                            <p class="text__product__mini__price"> 1 <span
-                                    class="text__product__mini__price__X">x</span>$250</p>
+                </summary>
 
-                        </div>
-                        <img class="header__right__div__cart__product__close__img" src="img/close-icon.svg" alt="close">
+            </details>
+            <div class="header__right__cart">
+                <div class="header__right__cart__item">
+                    <a href="#" class="header__right__cart__link"> <img src="img/product_mini_1.jpg"
+                            alt="product_mini_1"></a>
+                    <div class="header__right__cart__item-info">
+                        <h3 class="header__right__cart__title">Rebox Zane
+                        </h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="12" width="13" viewBox="0 0 576 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path fill="#e4af48"
+                                d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="12" width="13" viewBox="0 0 576 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path fill="#e4af48"
+                                d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="12" width="13" viewBox="0 0 576 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path fill="#e4af48"
+                                d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="12" width="13" viewBox="0 0 576 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path fill="#e4af48"
+                                d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="12" width="13" viewBox="0 0 576 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path fill="#e4af48"
+                                d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
+                        </svg>
+                        <p class="header__right__cart__text">1 <span class="header__right__cart__text-x">x</span> $250
+                        </p>
+
                     </div>
-                    <div class="line__separator__right__drop"></div>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512">
 
-                    <div class="header__right__div__cart__drop__total">
-                        <div class="header__right__div__cart__drop__total__price">
-                            <p class="temp">TOTAL</p>
-                            <p class="temp1">$500.00</p>
-                        </div>
+                        <path class="header__right__cart__fa-circle"
+                            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z" />
+                    </svg>
+
+
+                </div>
+                <div class="header__right__cart__item">
+                    <a href="#" class="header__right__cart__link"> <img src="img/product_mini_2.jpg"
+                            alt="product_mini_2"></a>
+                    <div class="header__right__cart__item-info">
+                        <h3 class="header__right__cart__title">Rebox Zane
+                        </h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="12" width="13" viewBox="0 0 576 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path fill="#e4af48"
+                                d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="12" width="13" viewBox="0 0 576 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path fill="#e4af48"
+                                d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="12" width="13" viewBox="0 0 576 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path fill="#e4af48"
+                                d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="12" width="13" viewBox="0 0 576 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path fill="#e4af48"
+                                d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="12" width="13" viewBox="0 0 576 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path fill="#e4af48"
+                                d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
+                        </svg>
+                        <p class="header__right__cart__text">1 <span class="header__right__cart__text-x">x</span> $250
+                        </p>
+
                     </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512">
+
+                        <path class="header__right__cart__fa-circle"
+                            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z" />
+                    </svg>
 
 
-                    <a href="#" class="header__right__div__checkout">Checkout</a>
-                    <a href="#" class="header__right__div__go__to__cart">Go to cart</a>
+                </div>
+                <div class="header__right__cart__total">
+                    <h4 class="header__right__cart__total-heading">
+                        TOTAL
+                    </h4>
+                    <p class="header__right__cart__total-price">
+                        $500.00
+                    </p>
 
-
-
-
-                </nav>
-
-
-
+                </div>
+                <a href="#" class="header__right__cart__button-link">
+                    <p class="header__right__cart__button-text">Checkout</p>
+                </a>
+                <a href="#" class="header__right__cart__button-link">
+                    <p class="header__right__cart__button-text">GO to cart</p>
+                </a>
             </div>
 
-            <a href="#" class="header__right__div__button">
-                <div class="header__right__div__button__text">My Account</div>
-                <svg class="svg__caret__down__white" xmlns="http://www.w3.org/2000/svg" height="16" width="10"
-                    viewBox="0 0 320 512">
-                    <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
-                    <path class="svg__caret__down__white__path"
-                        d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
-                </svg>
-            </a>
 
         </div>
+
+
     </header>
+
+
 
 </body>
 
