hw_2_single-page_start

--- a/the_brand/single_page.html
+++ b/the_brand/single_page.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>The Brand</title>
+    <title>Single Page</title>
 </head>
 
 <body>
@@ -197,7 +197,6 @@
 
         </div>
     </header>
-
     <nav class="navi">
         <div class="navi-box center">
             <ul class="menu">
@@ -361,133 +360,15 @@
 
     </nav>
 
-    <div class="banner center">
-        <div class="banner-bckgrnd">
-            <img class="banner-img " src="img/banner.png" alt="photo">
-        </div>
-        <p class="banner-text">THE BRAND <br><span class="banner-text-fs40">OF LUXERIOUS</span> <span
-                class="banner-text-fs40-pink">FASHION </span>
-        </p>
+    <p class="temp">Content</p>
 
 
 
-    </div>
-    <section class="main center">
-        <div class="main-item main-item-1">
-            <a href="#" class="main-link">
-                <img src="img/main-man.jpg" alt="for men">
-                <div class="main-link-box">
-                    <h4 class="link-box-heading">
-                        HOT DEAL
-                    </h4>
-                    <div class="link-box-link">
-                        FOR MEN
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="main-item main-item-2">
-            <a href="#" class="main-link">
-                <img src="img/main-women.jpg" alt="for women">
-                <div class="main-link-box">
-                    <h4 class="link-box-heading">
-                        30% offer
-                    </h4>
-                    <div class="link-box-link">
-                        WOMEN
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="main-item main-item-3">
-            <a href="#" class="main-link">
-                <img src="img/main-kids.jpg" alt="for Kids">
-                <div class="main-link-box">
-                    <h4 class="link-box-heading">
-                        new arrivals
-                    </h4>
-                    <div class="link-box-link">
-                        FOR kids
-                    </div>
-                </div>
-
-
-            </a>
-        </div>
-        <div class="main-item main-item-4">
-            <a href="#" class="main-link">
-                <img src="img/main-accessories.jpg" alt="Accessories">
-                <div class="main-link-box">
-                    <h4 class="link-box-heading">
-                        LUXIROUS & trendy
-                    </h4>
-                    <div class="link-box-link">
-                        ACCESSORIES
-                    </div>
-                </div>
-            </a>
-        </div>
-
-
-
-
-    </section>
-    <section class="product center">
-        <div class="product-head">
-            <h3 class="product-heading">Fetured Items</h3>
-            <p class="product-head-text">
-                Shop for items based on what we featured in this week
-            </p>
-        </div>
-
-        <div class="product-box">
-            <div class="product-item">
-                <a href="#" class="product-item-link">
-                    <img src="img/prod/item-1.jpg" alt="t-short">
-                </a>
-
-
-            </div>
-            <div class="product-item">
-                <a href="#" class="product-item-link">
-                    <img src="img/prod/item-2.jpg" alt="t-short">
-                </a>
-
-
-            </div>
-            <div class="product-item">
-                <a href="#" class="product-item-link">
-                    <img src="img/prod/item-3.jpg" alt="t-short">
-                </a>
-
-
-            </div>
-            <div class="product-item">
-                <a href="#" class="product-item-link">
-                    <img src="img/prod/item-4.jpg" alt="t-short">
-                </a>
-
-
-            </div>
-        </div>
-        <div class="product-box-button">
-            <a href="#" class="product-box-button-link">
-                <div class=product-box-button-text>
-                    Browse All Product
-                    <svg class="product-box-button-arrow-svg" xmlns="http://www.w3.org/2000/svg" height="16" width="16"
-                        viewBox="0 0 512 512">
-                        <path class="product-box-button-arrow-path"
-                            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
-                    </svg>
-                </div>
-            </a>
-        </div>
-
-    </section>
 
     <footer class="footer">
 
     </footer>
+
 
 </body>
 
