--- a/the_brand/single_page.html
+++ b/the_brand/single_page.html
@@ -359,15 +359,291 @@
         </div>
 
     </nav>
+    <div class="top-head center">
+        <h2 class="top-head__heading">New Arrivals</h2>
+        <nav class="breadcrums">
+            <ul class="breadcrumbs__ul">
+                <li class="breadcrumbs__li"><a href="index.html" class="breadcrumbs__link">HOME</a></li>
+                <li class="breadcrumbs__li"><a href="#" class="breadcrumbs__link">MEN</a></li>
+                <li class="breadcrumbs__li"><a href="#" class="breadcrumbs__link">New Arrivals</a></li>
+            </ul>
 
-    <p class="temp">Content</p>
+        </nav>
+    </div>
+    <div class="product-view">
+        <a href="#" class="view-link">
+            <div class="view-link__box">
+                <svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" viewBox="0 0 320 512">
+                    <path class="view-link__box_left"
+                        d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" />
+                </svg>
+            </div>
+        </a>
+        <img src="img/single-page/big-pic2.png" alt="big-pic">
+        <a href="#" class="view-link">
+            <div class="view-link__box">
+                <svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" viewBox="0 0 320 512">
+                    <path class="view-link__box_right"
+                        d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z" />
+                </svg>
+            </div>
+        </a>
+    </div>
+
+    <section class="product-desc center">
+        <h3 class="product-desc__category-title">WOMEN COLLECTION</h3>
+        <div class="product-desc__separator">
+            <div class="product-desc__separator_pink"></div>
+        </div>
+        <h3 class="product-desc__heading">Moschino Cheap And Chic</h3>
+        <p class="product-desc__text">Compellingly actualize fully researched processes before proactive outsourcing.
+            Progressively syndicate collaborative architectures before cutting-edge services. Completely visualize
+            parallel
+            core competencies rather than exceptional portals.
+        </p>
+        <div class="product-desc__material-designer">
+            <div class="product-desc__material">
+                <p class="product-desc__property">MATERIAL: </p>
+                <p class="product-desc__property_meaning">COTTON</p>
+            </div>
+            <div class="product-desc__designer">
+                <p class="product-desc__property">DESIGNER: </p>
+                <p class="product-desc__property_meaning">BINBURHAN</p>
+            </div>
+        </div>
+        <h3 class="product-desc__price">
+            $561
+        </h3>
+        <div class="product-desc__price_separator"></div>
+
+        <form action="#">
+            <div class="product-selection">
+                <div class="product-selection__box">
+                    <div class="product-selection__item">
+                        <h3 class="product-selection__title">CHOOSE COLOR</h3>
+
+                        <div class="product-selection__color">
+                            <div class="product-selection__color_logo"></div>
+                            <p class="product-selection__color_name">Red</p>
+                            <svg height="23" width="14" viewBox="0 0 448 512">
+                                <path class="product-selection__color_arrow"
+                                    d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
+                            </svg>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="product-selection__box">
+                    <div class="product-selection__item">
+                        <h3 class="product-selection__title">CHOOSE SIZE</h3>
+
+                        <div class="product-selection__size">
+                            <div class="product-selection__size_logo"></div>
+                            <p class="product-selection__size_name">XXL</p>
+                            <svg height="23" width="14" viewBox="0 0 448 512">
+                                <path class="product-selection__size_arrow"
+                                    d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
+                            </svg>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="product-selection__box">
+                    <div class="product-selection__item">
+                        <h3 class="product-selection__title">QUANTITY</h3>
+                        <div class="product-selection__quantity">
+
+                            <input class="product-selection__quantity_input" placeholder="1" required type="text">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <button type="submit" class="product-selection__link">
+                <div class="product-selection__button-box">
+                    <div class="product-selection__button">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="28" viewBox="0 0 576 512">
+                            <path class="product-selection__button_pic"
+                                d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z" />
+                        </svg>
+                        <p class="product-selection__button_text">Add to Cart</p>
+                    </div>
+                </div>
+            </button>
+        </form>
+
+    </section>
+
+    <section class="product-offers center">
+        <h3 class="product-offers__title">
+            you may like also
+        </h3>
+        <div class="product-offers__items">
+            <div class="product-offers__item">
+                <div class="product-offers__item_pic-box"></div>
+                <h3 class="product-offers__item_title">BLAZE LEGGINGS</h3>
+                <p class="product-offers__item_price">$52.00</p>
+            </div>
+
+            <div class="product-offers__items">
+                <div class="product-offers__item">
+                    <div class="product-offers__item_pic-box"></div>
+                    <h3 class="product-offers__item_title">ALEXA SWEATER</h3>
+                    <p class="product-offers__item_price">$52.00</p>
+                </div>
+            </div>
+            <div class="product-offers__items">
+                <div class="product-offers__item">
+                    <div class="product-offers__item_pic-box"></div>
+                    <h3 class="product-offers__item_title">AGNES TOP</h3>
+                    <p class="product-offers__item_price">$52.00</p>
+                </div>
+            </div>
+            <div class="product-offers__items">
+                <div class="product-offers__item">
+                    <div class="product-offers__item_pic-box"></div>
+                    <h3 class="product-offers__item_title">SYLVA SWEATER</h3>
+                    <p class="product-offers__item_price">$52.00</p>
+                </div>
+            </div>
+        </div>
+
+
+
+    </section>
 
 
 
 
-    <footer class="footer">
+    <section class="subscribe center">
+        <div class="subscribe-left">
+            <img class="subscribe-left-photo" src="img/subscribe-photo.png" alt="photo">
+            <div class="subscribe-left-box">
+                <p class="subscribe-left-text">
+                    “Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+                    a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”
+                </p>
+                <p class="subscribe-left-author">Bin Burhan</p>
+                <p class="subscribe-left-author-adr">Dhaka, Bd</p>
+                <div class="subscribe-left-progress">
+                    <div class="subscribe-left-progress-item subscribe-left-progress-item1"></div>
+                    <div class="subscribe-left-progress-item subscribe-left-progress-item2"></div>
+                    <div class="subscribe-left-progress-item subscribe-left-progress-item3"></div>
+                </div>
+            </div>
+        </div>
+        <div class="subscribe-help-box">
+            <div class="subscribe-right">
+                <h4 class="subscribe-right-title">SUBSCRIBE</h4>
+                <p class="subscribe-right-text">FOR OUR NEWLETTER AND PROMOTION</p>
+                <form action="#">
+                    <div class="subscribe-right-button-div">
+                        <div class="subscribe-right-prebutton-input">
+                            <input type="email" class="email-input-bckgrnd" placeholder="Enter Your Email"
+                                name="email-placehold" id="emplhld">
+                        </div>
+                        <div class="subscribe-right-button-input">
+                            <button class="subscribe-right-button" type="submit">Subscribe</button>
+                        </div>
+                    </div>
+                </form>
 
+
+            </div>
+        </div>
+    </section>
+    <footer class="footer center">
+        <div class="footer-lef-box">
+            <div class="footer-logo">
+                <a href="index.html" class="header__logo"><img class="logo__img" src="img/logo.svg" alt="logo"></a>
+                <div class="header__logo__text">BRAN<span class="header__logo__text__pink__bold">D</span></div>
+            </div>
+            <p class="footer-left-text">
+                Objectively transition extensive data rather than cross functional solutions. Monotonectally
+                syndicate
+                multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array of
+                processes and cross-unit partnerships.
+                <br>
+                <br>
+                Efficiently plagiarize 24/365 action items and focused infomediaries.
+                Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.
+            </p>
+        </div>
+        <div class="footer-right-item">
+            <div class="footer-right-item-list">COMPANY
+                <a class="footer-right-item-link" href="#">Home</a>
+                <a class="footer-right-item-link" href="#">Shop</a>
+                <a class="footer-right-item-link" href="#">About</a>
+                <a class="footer-right-item-link" href="#">How It Works</a>
+                <a class="footer-right-item-link" href="#">Contact</a>
+            </div>
+            <div class="footer-right-item-list">INFORMATION
+                <a class="footer-right-item-link" href="#">Tearms&nbsp&&nbspCondition</a>
+                <a class="footer-right-item-link" href="#">Privacy Policy</a>
+                <a class="footer-right-item-link" href="#">How to Buy</a>
+                <a class="footer-right-item-link" href="#">How to Sell</a>
+                <a class="footer-right-item-link" href="#">Promotion</a>
+            </div>
+            <div class="footer-right-item-list">SHOP&nbsp;CATEGORY
+                <a class="footer-right-item-link" href="#">Men</a>
+                <a class="footer-right-item-link" href="#">Women</a>
+                <a class="footer-right-item-link" href="#">Child</a>
+                <a class="footer-right-item-link" href="#">Apparel</a>
+                <a class="footer-right-item-link" href="#">Brows All</a>
+            </div>
+        </div>
     </footer>
+    <div class="foo-socials center">
+        <p class="foo-socials-text">© 2017 Brand All Rights Reserved.</p>
+        <div class="foo-socials-ilems">
+            <a class="foo-socials-link" href="https://yandex.ru">
+                <div class="foo-socials-item">
+                    <svg height="16" width="10" viewBox="0 0 320 512">
+                        <path class="foo-socials-pic"
+                            d="M80 299.3V512H196V299.3h86.5l18-97.8H196V166.9c0-51.7 20.3-71.5 72.7-71.5c16.3 0 29.4 .4 37 1.2V7.9C291.4 4 256.4 0 236.2 0C129.3 0 80 50.5 80 159.4v42.1H14v97.8H80z" />
+                    </svg>
+                </div>
+            </a>
+
+            <a class="foo-socials-link" href="https://yandex.ru">
+                <div class="foo-socials-item">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512">
+                        <path class="foo-socials-pic"
+                            d="M459.4 151.7c.3 4.5 .3 9.1 .3 13.6 0 138.7-105.6 298.6-298.6 298.6-59.5 0-114.7-17.2-161.1-47.1 8.4 1 16.6 1.3 25.3 1.3 49.1 0 94.2-16.6 130.3-44.8-46.1-1-84.8-31.2-98.1-72.8 6.5 1 13 1.6 19.8 1.6 9.4 0 18.8-1.3 27.6-3.6-48.1-9.7-84.1-52-84.1-103v-1.3c14 7.8 30.2 12.7 47.4 13.3-28.3-18.8-46.8-51-46.8-87.4 0-19.5 5.2-37.4 14.3-53 51.7 63.7 129.3 105.3 216.4 109.8-1.6-7.8-2.6-15.9-2.6-24 0-57.8 46.8-104.9 104.9-104.9 30.2 0 57.5 12.7 76.7 33.1 23.7-4.5 46.5-13.3 66.6-25.3-7.8 24.4-24.4 44.8-46.1 57.8 21.1-2.3 41.6-8.1 60.4-16.2-14.3 20.8-32.2 39.3-52.6 54.3z" />
+                    </svg>
+                </div>
+            </a>
+
+            <a class="foo-socials-link" href="https://yandex.ru">
+                <div class="foo-socials-item">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512">
+                        <path class="foo-socials-pic"
+                            d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z" />
+                    </svg>
+                </div>
+            </a>
+
+            <a class="foo-socials-link" href="https://yandex.ru">
+                <div class="foo-socials-item">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="16" width="12" viewBox="0 0 384 512">
+                        <path class="foo-socials-pic"
+                            d="M204 6.5C101.4 6.5 0 74.9 0 185.6 0 256 39.6 296 63.6 296c9.9 0 15.6-27.6 15.6-35.4 0-9.3-23.7-29.1-23.7-67.8 0-80.4 61.2-137.4 140.4-137.4 68.1 0 118.5 38.7 118.5 109.8 0 53.1-21.3 152.7-90.3 152.7-24.9 0-46.2-18-46.2-43.8 0-37.8 26.4-74.4 26.4-113.4 0-66.2-93.9-54.2-93.9 25.8 0 16.8 2.1 35.4 9.6 50.7-13.8 59.4-42 147.9-42 209.1 0 18.9 2.7 37.5 4.5 56.4 3.4 3.8 1.7 3.4 6.9 1.5 50.4-69 48.6-82.5 71.4-172.8 12.3 23.4 44.1 36 69.3 36 106.2 0 153.9-103.5 153.9-196.8C384 71.3 298.2 6.5 204 6.5z" />
+                    </svg>
+                </div>
+            </a>
+
+            <a class="foo-socials-link" href="https://yandex.ru">
+                <div class="foo-socials-item">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="16" width="20" viewBox="0 0 640 512">
+
+                        <path class="foo-socials-pic"
+                            d="M386.1 228.5c1.8 9.7 3.1 19.4 3.1 32C389.2 370.2 315.6 448 204.8 448c-106.1 0-192-85.9-192-192s85.9-192 192-192c51.9 0 95.1 18.9 128.6 50.3l-52.1 50c-14.1-13.6-39-29.6-76.5-29.6-65.5 0-118.9 54.2-118.9 121.3 0 67.1 53.4 121.3 118.9 121.3 76 0 104.5-54.7 109-82.8H204.8v-66h181.3zm185.4 6.4V179.2h-56v55.7h-55.7v56h55.7v55.7h56v-55.7H627.2v-56h-55.7z" />
+                    </svg>
+                </div>
+            </a>
+        </div>
+    </div>
 
 
 </body>
